# YT-Panel-NEW

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  LICENSE  README.md  REFACTOR_SUMMARY.md  SECURITY_DESIGN.md  add-frontend-version.js  build.sh  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  docker-publish.yml  release.yml
YT-Panel-NEW/: .dockerignore  .gitignore  Dockerfile  README.md  SECURITY_AUDIT.md  add-frontend-version.js  docker-compose.yml  package.json  vite.config.ts
YT-Panel-NEW/backend/: Cargo.toml
YT-Panel-NEW/docs/: INPUT_VALIDATION.md  TRACING_LOGGING.md  parity-checklist.md
backend/: Cargo.toml
backend/config/: docker.toml  example.toml
backend/src/: config.rs  error.rs  lib.rs  main.rs  models.rs  state.rs  types.rs  utils.rs
backend/src/api/: auth.rs  file.rs  mod.rs  search.rs  user.rs
backend/src/auth/: mod.rs
backend/src/db/: mod.rs
backend/src/handlers/: auth.rs  file.rs  mod.rs  panel.rs  search.rs  system.rs  user.rs
config/: proxy.ts
docs/: ERROR_HANDLING_MACRO.md  FILE_UPLOAD_SECURITY.md  SQLITE_WAL_MIGRATION.md  migration-plan.md
scripts/: container-init.sh  ct-entrypoint.sh  export-pve-template.sh  migrate_from_yt_panel.py  prepare-release-files.sh
src/api/: search.ts
src/composables/: useSmartSearch.ts
src/hooks/: useIconRender.ts  useLanguage.ts  usePublicPasswordPolicy.ts
src/locales/: en-US.json  index.ts  zh-CN.json
src/plugins/: scrollbarStyle.ts
src/router/: index.ts  permission.ts
src/typings/: homePage.d.ts  login.d.ts  user.d.ts  (+1 more)
(+136 files in other folders)
