[package]
name = "yt-panel-rust-backend"
version = "1.1.7"
edition = "2021"
description = "Rust backend for YT-Panel-NEW, a hardened self-hosted server and NAS dashboard"
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/YTjungle666/YT-Panel-NEW"
homepage = "https://github.com/YTjungle666/YT-Panel-NEW"

[profile.release]
opt-level = "z"      # 优化大小
lto = true           # 链接时优化
panic = "abort"      # 使用 abort 替代 unwind
strip = true         # 移除符号表
codegen-units = 1    # 单 codegen unit 更好的优化

[dependencies]
once_cell = "1"
anyhow = "1"
axum = { version = "0.7", features = ["multipart", "macros"] }
base64 = "0.22"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7"
mime_guess = "2"
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls", "chrono"] }
sysinfo = "0.31"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "fs", "io-util", "sync", "time"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
